# task-sched

./: CMakeLists.txt  README.md
include/task-sched/core/: Coordinator.h  Resumable.h  TaskResult.h  WorkSharingQueue.h  Worker.h
include/task-sched/util/: ListElem.h  Queue.h  Queue.tcc
src/core/: Coordinator.cpp  WorkSharingQueue.cpp  Worker.cpp
test/ut/: TestWorker.cpp  TestWorkingShareQueue.cpp
